# tensorflow_lite_efficientdet

./: LICENSE  README.md  params.json
c++/: CMakeLists.txt  main_tflite_model.cpp
c++/inc/: efficientdet_classes.h
python/app/: efficientdet_classes.py  main_tf_lite_model.py
